chore: update gitignore, beads issues, and supervisor tech stack
- Ignore sandbox artifacts (dotfiles, git internals, IDE, worktrees)
- Ignore beads local-only files (daemon-error, sqlite db)
- Update beads issues.jsonl with kicad-edit-mcp-7ji closure
- Update python-backend-supervisor with accurate tech stack

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,36 @@ dist/
 build/
 .claude-tools/
 pytest-of-*/
+
+# IDE
+.idea/
+.vscode/
+
+# Local config
+.mcp.json
+
+# Worktrees
+.worktrees/
+
+# Sandbox artifacts (Claude Code sandbox leaks home dotfiles)
+.bash_profile
+.bashrc
+.zshrc
+.zprofile
+.profile
+.gitconfig
+.gitmodules
+.ripgreprc
+
+# Git internals (sandbox artifacts)
+HEAD
+config
+hooks/
+objects/
+refs/
+
+# Beads local-only files
+.beads/daemon-error
+.beads/*.db
+.beads/*.db-wal
+.beads/*.db-shm
