--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
 [project.scripts]
 kicad-edit-mcp = "server:main"
 
+[tool.setuptools]
+py-modules = ["server", "kicad_helpers"]
+
 [build-system]
 requires = ["setuptools>=68"]
-build-backend = "setuptools.backends.legacy:build"
+build-backend = "setuptools.build_meta"
