feat: migrate kicad_helpers from kiutils to kicad-sch-api
- rewrite 5 schematic functions using kicad-sch-api v0.5.5
- fix KiCad 9 visibility bug: _sync_hidden_properties reads __sexp_ to
  handle both bare 'hide' (KiCad 6) and '(hide yes)' (KiCad 9)
- remove dnp support; raise ValueError if dnp key passed
- update update_schematic_info to use set_title_block API
- rename_net: local + hierarchical only (global_labels not in API)
- swap kiutils -> kicad-sch-api in pyproject.toml
- add tests/fixtures/test_schematic_v9.kicad_sch with (hide yes) format
- update tests: remove kiutils imports, add 4 KiCad 9 regression tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "KiCad schematic/project modification MCP server"
 requires-python = ">=3.11"
 dependencies = [
     "fastmcp",
-    "kiutils",
+    "kicad-sch-api",
 ]
 
 [project.scripts]
